--- a/Site/index.html
+++ b/Site/index.html
@@ -6,49 +6,87 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EasyPortal - Dashboard</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <div class="content">
         <div class="left-side">
-            <div class="camera-render"></div>
-            <div class="logs"></div>
+            <div class="left-side-div camera-render"></div>
+            <div class="left-side-div logs"></div>
         </div>
         <div class="dashboard">
-            <div class="top-action">
-                <div class="left-side">
-                    <div class="week-stats">
-                        <span class="stat-value">52</span>
-                        <p class="stat-label">Utilisation cette semaine...</p>
-                    </div>
-                    <div class="day-stats">
-                        <span class="stat-value">5</span>
-                        <p class="stat-label">Utilisation ce jour...</p>
-                    </div>
+            <div class="top-view">
+                <div class="title">
+                    <h1>EasyPortal</h1>
                 </div>
-                <div class="open-button">
-                    <h1 class="open">Ouvrir</h1>
-                    <p class="open-label">Préssé pour simplement ouvrir</p>
+                <div class="displ">
+                    <div class="left-displ">
+                        <div class="week-stats stats">
+                            <span class="stat-value">0</span>
+                            <p class="stat-label">Utilisation cette semaine...</p>
+                        </div>
+                        <div class="day-stats stats">
+                            <span class="stat-value">0</span>
+                            <p class="stat-label">Utilisation ce jour...</p>
+                        </div>
+                    </div>
+                    <div class="open-button">
+                        <img src="/Site/imgs/svg/door-icon.svg" alt="Icone d'ouverture de porte">
+                        <h2 class="open">Ouvrir</h2>
+                        <p class="open-label">Préssé pour simplement ouvrir</p>
+                    </div>
                 </div>
             </div>
             <div class="user-action">
-                <div class="add-user">*
+                <div class="add-user user-btn">
+                    <img src="/Site/imgs/svg/add-icon.svg" alt="Icone d'ajout d'utilisateur">
                     <h2 class="add-user-heading">Ajouter un utilisateur</h2>
-                    <p class="add-user-desc">Indiquez le nom, prénom et nom d'utilisateur ainsi qu'une plaque
-                        d'immatriculation par défaut</p>
+                    <p class="add-user-desc">Indiquez le nom, prenom et nom d’utilisateur ainsi qu’une premiére plaque.
+                    </p>
                 </div>
-                <div class="del-user">
+                <div class="del-user user-btn">
+                    <img src="/Site/imgs/svg/trash-ico-30.svg" alt="Icone d'ajout d'utilisateur">
                     <h2 class="del-user-heading">Supprimer un utilisateur</h2>
-                    <p class="del-user-desc">Supprimer un utilisateur de vôtre choix en utilisant le username</p>
+                    <p class="del-user-desc">Supprimer un utilisateur de vôtre choix en utilisant le username.</p>
                 </div>
             </div>
             <div class="users-list">
-                <tr>
-                    <th>Username</th>
-                    <th>Prénom</th>
-                    <th>Nom</th>
-                    <th>Groupe</th>
-                </tr>
+                <h2>UTILISATEUR</h2>
+                <table>
+                    <tr class="table-header">
+                        <th>Username</th>
+                        <th>Prénom</th>
+                        <th>Nom</th>
+                        <th>Groupe</th>
+                        <th></th>
+                    </tr>
+                    <tr class="table-row">
+                        <td>Marc77</td>
+                        <td>Marc</td>
+                        <td>Jean</td>
+                        <td>User</td>
+                        <td>
+                            <img class="arrow-ico nClick table-ico" src="/Site/imgs/svg/arrow-icon.svg"
+                                alt="Flêche d'éxtention">
+                            <img class="edit-ico table-ico" src="/Site/imgs/svg/edit-ico.svg" alt="Boutton modifier">
+                            <img class="trash-ico table-ico" src="/Site/imgs/svg/trash-ico.svg" alt="Boutton supprimer">
+                        </td>
+                    </tr>
+                    <tr class="table-row">
+                        <td>Marc77</td>
+                        <td>Marc</td>
+                        <td>Jean</td>
+                        <td>User</td>
+                        <td>
+                            <img class="arrow-ico nClick table-ico" src="/Site/imgs/svg/arrow-icon.svg"
+                                alt="Flêche d'éxtention">
+                            <img class="edit-ico table-ico" src="/Site/imgs/svg/edit-ico.svg" alt="Boutton modifier">
+                            <img class="trash-ico table-ico" src="/Site/imgs/svg/trash-ico.svg" alt="Boutton supprimer">
+                        </td>
+                    </tr>
+                </table>
             </div>
         </div>
     </div>
