📝Login page done

--- a/Site/index.html
+++ b/Site/index.html
@@ -68,10 +68,14 @@
                         <td>Jean</td>
                         <td>User</td>
                         <td>
-                            <img class="arrow-ico nClick table-ico" src="/Site/imgs/svg/arrow-icon.svg"
-                                alt="Flêche d'éxtention">
-                            <img class="edit-ico table-ico" src="/Site/imgs/svg/edit-ico.svg" alt="Boutton modifier">
-                            <img class="trash-ico table-ico" src="/Site/imgs/svg/trash-ico.svg" alt="Boutton supprimer">
+                            <div class="table-img">
+                                <img class="arrow-ico nClick table-ico" src="/Site/imgs/svg/arrow-icon.svg"
+                                    alt="Flêche d'éxtention">
+                                <img class="edit-ico table-ico" src="/Site/imgs/svg/edit-ico.svg"
+                                    alt="Boutton modifier">
+                                <img class="trash-ico table-ico" src="/Site/imgs/svg/trash-ico.svg"
+                                    alt="Boutton supprimer">
+                            </div>
                         </td>
                     </tr>
                     <tr class="table-row">
@@ -80,10 +84,14 @@
                         <td>Jean</td>
                         <td>User</td>
                         <td>
-                            <img class="arrow-ico nClick table-ico" src="/Site/imgs/svg/arrow-icon.svg"
-                                alt="Flêche d'éxtention">
-                            <img class="edit-ico table-ico" src="/Site/imgs/svg/edit-ico.svg" alt="Boutton modifier">
-                            <img class="trash-ico table-ico" src="/Site/imgs/svg/trash-ico.svg" alt="Boutton supprimer">
+                            <div class="table-img">
+                                <img class="arrow-ico nClick table-ico" src="/Site/imgs/svg/arrow-icon.svg"
+                                    alt="Flêche d'éxtention">
+                                <img class="edit-ico table-ico" src="/Site/imgs/svg/edit-ico.svg"
+                                    alt="Boutton modifier">
+                                <img class="trash-ico table-ico" src="/Site/imgs/svg/trash-ico.svg"
+                                    alt="Boutton supprimer">
+                            </div>
                         </td>
                     </tr>
                 </table>
