✅ Design and responsive

--- a/Site/index.html
+++ b/Site/index.html
@@ -17,6 +17,10 @@
             <div class="left-side-div logs"></div>
         </div>
         <div class="dashboard">
+            <nav>
+                <h1>EasyPortal</h1>
+                <img src="/Site/imgs/svg/menu-icon.svg" alt="">
+            </nav>
             <div class="top-view">
                 <div class="title">
                     <h1>EasyPortal</h1>
