--- a/Site/index.html
+++ b/Site/index.html
@@ -19,7 +19,7 @@
         <div class="dashboard">
             <nav>
                 <h1>EasyPortal</h1>
-                <img src="/Site/imgs/svg/menu-icon.svg" alt="">
+                <img src="imgs/svg/menu-icon.svg" alt="">
             </nav>
             <div class="top-view">
                 <div class="title">
@@ -37,7 +37,7 @@
                         </div>
                     </div>
                     <div class="open-button">
-                        <img src="/Site/imgs/svg/door-icon.svg" alt="Icone d'ouverture de porte">
+                        <img src="imgs/svg/door-icon.svg" alt="Icone d'ouverture de porte">
                         <h2 class="open">Ouvrir</h2>
                         <p class="open-label">Préssé pour simplement ouvrir</p>
                     </div>
@@ -45,13 +45,13 @@
             </div>
             <div class="user-action">
                 <div class="add-user user-btn">
-                    <img src="/Site/imgs/svg/add-icon.svg" alt="Icone d'ajout d'utilisateur">
+                    <img src="imgs/svg/add-icon.svg" alt="Icone d'ajout d'utilisateur">
                     <h2 class="add-user-heading">Ajouter un utilisateur</h2>
                     <p class="add-user-desc">Indiquez le nom, prenom et nom d’utilisateur ainsi qu’une premiére plaque.
                     </p>
                 </div>
                 <div class="del-user user-btn">
-                    <img src="/Site/imgs/svg/trash-ico-30.svg" alt="Icone d'ajout d'utilisateur">
+                    <img src="imgs/svg/trash-ico-30.svg" alt="Icone d'ajout d'utilisateur">
                     <h2 class="del-user-heading">Supprimer un utilisateur</h2>
                     <p class="del-user-desc">Supprimer un utilisateur de vôtre choix en utilisant le username.</p>
                 </div>
@@ -73,11 +73,11 @@
                         <td>User</td>
                         <td>
                             <div class="table-img">
-                                <img class="arrow-ico nClick table-ico" src="/Site/imgs/svg/arrow-icon.svg"
+                                <img class="arrow-ico nClick table-ico" src="imgs/svg/arrow-icon.svg"
                                     alt="Flêche d'éxtention">
-                                <img class="edit-ico table-ico" src="/Site/imgs/svg/edit-ico.svg"
+                                <img class="edit-ico table-ico" src="imgs/svg/edit-ico.svg"
                                     alt="Boutton modifier">
-                                <img class="trash-ico table-ico" src="/Site/imgs/svg/trash-ico.svg"
+                                <img class="trash-ico table-ico" src="imgs/svg/trash-ico.svg"
                                     alt="Boutton supprimer">
                             </div>
                         </td>
@@ -89,11 +89,11 @@
                         <td>User</td>
                         <td>
                             <div class="table-img">
-                                <img class="arrow-ico nClick table-ico" src="/Site/imgs/svg/arrow-icon.svg"
+                                <img class="arrow-ico nClick table-ico" src="imgs/svg/arrow-icon.svg"
                                     alt="Flêche d'éxtention">
-                                <img class="edit-ico table-ico" src="/Site/imgs/svg/edit-ico.svg"
+                                <img class="edit-ico table-ico" src="imgs/svg/edit-ico.svg"
                                     alt="Boutton modifier">
-                                <img class="trash-ico table-ico" src="/Site/imgs/svg/trash-ico.svg"
+                                <img class="trash-ico table-ico" src="imgs/svg/trash-ico.svg"
                                     alt="Boutton supprimer">
                             </div>
                         </td>
