--- a/Site/user.html
+++ b/Site/user.html
@@ -15,7 +15,7 @@
         <h1>EasyPortal</h1>
         <div class="open-button">
             <div class="open-header">
-                <img src="/Site/imgs/svg/door-icon.svg" alt="">
+                <img src="imgs/svg/door-icon.svg" alt="">
                 <h2 class="open">Ouvrir</h2>
             </div>
             <p class="open-label">Préssé pour simplement ouvrir</p>
@@ -27,8 +27,8 @@
                     <td class="plate-number">AA-123-BB</td>
                     <td>
                         <div class="table-img">
-                            <img class="edit-ico table-ico" src="/Site/imgs/svg/edit-ico.svg" alt="Boutton modifier">
-                            <img class="trash-ico table-ico" src="/Site/imgs/svg/trash-ico.svg" alt="Boutton supprimer">
+                            <img class="edit-ico table-ico" src="imgs/svg/edit-ico.svg" alt="Boutton modifier">
+                            <img class="trash-ico table-ico" src="imgs/svg/trash-ico.svg" alt="Boutton supprimer">
                         </div>
                     </td>
                 </tr>
