✅ Menu responsive vue

--- a/Site/dashboard.html
+++ b/Site/dashboard.html
@@ -128,7 +128,13 @@
     </div>
     <div id="overlay"></div>
     <div class="menu" id="menu">
-        <div class="modal-body">
+        <div class="sub-menu menu-header">
+            <img src="images/svg/cross.svg" alt="">
+            <hr>
+        </div>
+        <div class="sub-menu menu-body">
+            <h2>LOGS</h2>
+            <h2>CAMERA</h2>
         </div>
     </div>
     <script src="scripts/lib/papaparse.min.js"></script>
